--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "joi": "^6.4.3",
     "later": "^1.2.0",
-    "lodash": "^3.9.3"
+    "lodash": "^3.9.3",
+    "nedb": "^1.8.0"
   }
 }
