--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "joi": "^6.4.3",
     "later": "^1.2.0",
     "lodash": "^3.9.3",
-    "nedb": "^1.8.0"
+    "nedb": "^1.8.0",
+    "bluebird": "~3.3.3",
+    "sequelize": "~3.19.3",
+    "mysql": "~2.10.2"
   }
 }
